base.css
:root {
	--header_bg: #9AB4D7;
	--page_width: 860px;
	--gal_pad: 35px;
	--pic_border: 3px;
	--col: 3;
	--img_scale: 1.05;
	--desc_height: 40px;
}

#gallery {
	margin-right: calc(var(--pic_border) * var(--col));
	gap: 1rem;
	padding:10px;
	columns: var(--col); 
	box-sizing: border_box;
	
}

#gallery p {
	vertical-align:bottom;
	text-align:right;
	position: absolute;
	box-sizing: border-box;
	padding-right: 20px;
	padding-top: 3px;
	height: var(--desc_height);
	margin: calc(-7.5px - var(--desc_height)) calc(-1 * var(--pic_border) - 1px);
	background: black;
	opacity: 0.75;
	color: white;
}

#gallery img:hover {
	transform: scale(var(--img_scale), var(--img_scale));
  	transition-delay: 0s;
	transition-timing-function: ease;
	transition-duration: 0.05s;
	border: var(--pic_border) solid black;
}

#gallery img {
	margin-bottom: 0.7rem;
	vertical-align: bottom;
	border: var(--pic_border) solid transparent;
	display: inline-block;
	width: 100%;
	height: auto;
}

#main {
	width: var(--page_width);
	margin: 0 auto;
	background: #e3e3e3;
	border-radius:12px;
	height: auto;
}

#header {
	line-height: 35px;
	font-family: Georgia;
	font-size: large;
	text-align: left;
	background: var(--header_bg);
	padding: 1px;
	padding-left : 40px;
	border-radius: 12px;
}	

#header h1 {
	float:left;
	display: inline-block;
}

#header h3 {
	font-family: Courier;
	padding-top:70px;
	display: flow;
	font-size: large;
	line-height: 0px;
	padding-bottom: 25px;
}

nav ul {
	padding-top:4px;
	float: right;
}

nav {
	display: inline;
	background-color: var(--header_bg);
	height: 35px;
}

nav li {
	list-style: none;
	float: right;
	width: 80px;
	height: 35px;
	background-color: var(--header_bg);
	text-align: center;
	border-left: 3px black solid;
	line-height: 35px;
}

nav li:hover {
	transform: translateY(-7px);
	transition-delay: 0s;
	transition-timing-function: ease;
	transition-duration: 0.2s;
}	

nav ul li a {
	color:#ffffff;
	text-decoration: none;
	display: block;
}

nav ul li a:hover {
	transition-delay: 0s;
	transition-timing-function: ease;
	transition-duration: 0.2s;
	
	background-color:#29336b;
	color:#F8F068;
}

